feat: [US-004] - Split DailyService — Extract DailyTeamManagementService
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>